smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/shape-name-syntax.smithy
// Parse error at line 4, column 11 near `Not...Valid`: Invalid shape ID: com.foo#Not...Valid
namespace com.foo

structure Not...Valid {}
